--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ This project is developed and maintained by the following contributors:
 
 1. Stan Queuniez <queuniezs@gmail.com>
 2. Brahim Haddad <brahim.haddad@gmail.com>
-3. Ali Medjnoun <ali.medjnoun@gmail.com>
+3. Ali Medjnoun <a.medjnoun@gmail.com>
